Stops text in nav items from overflowing

--- a/less/widget-navigation.less
+++ b/less/widget-navigation.less
@@ -53,3 +53,8 @@
         display: block;
     }
 }
+
+// Allow sub items to wrap
+.navigation-item--child {
+	white-space: normal;
+}
